--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -12,9 +12,9 @@ enablePhotoSwipe = true
 enableSearch = true
 enableGoToTop = true
 enableWhoami = true
-summaryShape = "card" # card, classic, compact
+summaryShape = "classic" # card, classic, compact
 archiveGroupByDate = "2006-01" # "2006-01": group by month, "2006": group by year
-archivePaginate = 15
+archivePaginate = 50
 paginateWindow = 1
 
 # whoami
@@ -118,7 +118,7 @@ commento = false
   douban = ""
   csdn = ""
   zhihu = ""
-  gitlab = ""
+  gitlab = "https://gitlab.com/sashmit"
   mastodon = ""
 
 [donationOptions]
